package ui;

public interface EntradaUsuario {

    int lerInteiro() throws Exception;
    String lerTexto() throws Exception;
}
